java_library(
    name = "nalim",
    srcs = glob(["**/src/one/nalim/*.java"]),
    visibility = ["//visibility:public"],
    javacopts = [
        "--add-modules jdk.internal.vm.ci",
        "--add-exports jdk.internal.vm.ci/jdk.vm.ci.code=ALL-UNNAMED",
        "--add-exports jdk.internal.vm.ci/jdk.vm.ci.code.site=ALL-UNNAMED",
        "--add-exports jdk.internal.vm.ci/jdk.vm.ci.hotspot=ALL-UNNAMED",
        "--add-exports jdk.internal.vm.ci/jdk.vm.ci.meta=ALL-UNNAMED",
        "--add-exports jdk.internal.vm.ci/jdk.vm.ci.runtime=ALL-UNNAMED",
    ],
)
